# GCIP

./: .gitignore  Cargo.toml  README.md  build.rs
.circleci/: config.yml  config.yml.txt
.github/workflows/: build.yml  unit_tests.yml
examples/: bsv.rs
src/: main.rs  version.rc
tmp/: version.lib
