[package]
name = "gcip"
version = "0.1.0"
authors = ["Brian Cook <bcook@rowdydog.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
clap = "2.33"
structopt = { version = "0.2", default-features = false }
regex = "1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[build-dependencies]
embed-resource = "1.3"
