[package]
name = "gcip"
version = "0.1.0"
authors = ["Brian Cook <bcook@rowdydog.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
structopt = { version = "0.2", default-features = false }
regex = "1"
toml = "0"  # fix: Move to build-dependencies.

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
